[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "txl_notebook_editor"
version = "0.2.15"
description = "TXL plugin for a notebook editor"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "David Brochart", email = "david.brochart@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "txl >=0.2.18,<0.3.0",
  "pycrdt >=0.10.9,<0.11.0",
  "jupyter-ydoc >=3.0.2,<4.0.0",
]

[project.urls]
Source = "https://github.com/davidbrochart/jpterm/plugins/notebook_editor"

[project.entry-points]
"asphalt.components" = {notebook_editor = "txl_notebook_editor.components:NotebookEditorComponent"}
"txl.components"     = {notebook_editor = "txl_notebook_editor.components:NotebookEditorComponent"}
