[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "txl_remote_contents"
version = "0.2.14"
description = "TXL plugin for remote contents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "David Brochart", email = "david.brochart@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "txl >=0.2.18,<0.3.0",
  "httpx>=0.23.1",
  "httpx-ws>=0.4.2",
  "pycrdt >=0.8.11,<0.9.0",
  "pycrdt-websocket >=0.13.0,<0.14.0",
  "jupyter-ydoc >=2.0.0,<3.0.0",
]

[project.urls]
Source = "https://github.com/davidbrochart/jpterm/plugins/remote_contents"

[project.entry-points]
"asphalt.components" = {remote_contents = "txl_remote_contents.components:RemoteContentsComponent"}
"txl.components"     = {remote_contents = "txl_remote_contents.components:RemoteContentsComponent"}
