[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "txl_remote_kernels"
version = "0.2.14"
description = "TXL plugin for remote kernels"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "David Brochart", email = "david.brochart@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "txl >=0.2.18,<0.3.0",
  "txl_kernel",
  "httpx >=0.23.1",
  "httpx-ws >=0.4.2",
  "pycrdt >=0.8.11,<0.9.0",
]

[project.urls]
Source = "https://github.com/davidbrochart/jpterm/plugins/remote_kernels"

[project.entry-points]
"asphalt.components" = {remote_kernels = "txl_remote_kernels.components:RemoteKernelsComponent", remote_kernelspecs = "txl_remote_kernels.components:RemoteKernelspecsComponent"}
"txl.components"     = {remote_kernels = "txl_remote_kernels.components:RemoteKernelsComponent", remote_kernelspecs = "txl_remote_kernels.components:RemoteKernelspecsComponent"}
