[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "txl_remote_terminals"
description = "TXL plugin for remote terminals"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "David Brochart", email = "david.brochart@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "txl",
  "httpx>=0.23.1",
  "httpx-ws>=0.4.2",
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/davidbrochart/jpterm/plugins/remote_terminals"

[project.entry-points]
"asphalt.components" = {remote_terminals = "txl_remote_terminals.components:RemoteTerminalsComponent"}
"txl.components"     = {remote_terminals = "txl_remote_terminals.components:RemoteTerminalsComponent"}

[tool.hatch.version]
path = "txl_remote_terminals/__init__.py"
