[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "txl_terminal"
version = "0.3.6"
description = "TXL plugin for a terminal widget"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
classifiers = [ "Development Status :: 4 - Beta", "Programming Language :: Python", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13", "Programming Language :: Python :: Implementation :: CPython", "Programming Language :: Python :: Implementation :: PyPy",]
dependencies = [ "txl ==0.3.2", "pyte>=0.8.1",]
[[project.authors]]
name = "David Brochart"
email = "david.brochart@gmail.com"

[project.urls]
Source = "https://github.com/davidbrochart/jpterm/plugins/terminal"

[project.entry-points."txl.modules"]
terminal = "txl_terminal.main:TerminalModule"
